data/forge_javadoc/1.9.4/raw/net/minecraft/world/gen/structure/StructureMineshaftPieces.Cross.md
---
title: "StructureMineshaftPieces.Cross"
description: "public static class StructureMineshaftPieces.Cross extends StructureComponent"
package: "net/minecraft/world/gen/structure"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/world/gen/structure/StructureMineshaftPieces.Cross.html"
sourceType: javadoc
---

# StructureMineshaftPieces.Cross

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureMineshaftPieces.Cross

## Class signature

```java
public static class StructureMineshaftPieces.Cross extends StructureComponent
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)`
- `void buildComponent(StructureComponent componentIn, java.util.List<StructureComponent> listIn, java.util.Random rand)`
- `static StructureBoundingBox findCrossing(java.util.List<StructureComponent> listIn, java.util.Random rand, int x, int y, int z, EnumFacing facing)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)`
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)`

## Fields

- `Cross`
- `Cross`
